# treecoder

./: .gitmodules  CMakeLists.txt  README.md
include/: container.hpp  file.hpp  hash.hpp  prefixtable_generated.h  treecoder.hpp  version.hpp  version.hpp.in
schema/: generate.sh  prefixtable.fbs
src/: container.cpp  file.cpp  hash.cpp  main.cpp  treecoder.cpp
test/: treecoder_test.cpp
